--- a/acercade.html
+++ b/acercade.html
@@ -13,15 +13,21 @@
   <title>Cronómetro - Acerca de</title>
 </head>
 <body>
-    <div class="menu">
+    <header>
+	<div class="cabecera">
 		<img class="logo" src="img/timer.png" alt="Logo">
 		<h2>Cron&oacute;metro</h2>
 <!--		<img class="close" src="img/close.png" alt="Cerrar" onclick="cerrar();"> -->
     </div>
-	<div class="about">
+	</header>
+    
+	<footer>
+	<div class="cuerpo">
 		<h1>App desarrollada por J. Juan Hernández</h1>
 		<a href="http://aquiesta.org" target="_blank">http://www.aquiesta.org</a>
+		<br>Copyright &copy; 2018
 	</div>
-	<a href="index.html" class="acercade"><img class="logo" src="img/common-back.png" alt="<">Volver</a>
+	</footer>
+	<a class="pie" href="index.html"><img class="logo" src="img/common-back.png" alt="<">Volver</a>
 </body>
 </html>
