--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
-  
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Orbitron" />
 <!--  <script type="text/javascript">
 	//Global var to store a reference to the opened window
 	var openedWindow;
@@ -48,6 +46,8 @@
     <div id="lap" class="button" onclick="lap();">Vuelta</div>
     <div id="clear" class="button" onclick="limpa();">Limpiar</div>
 	
-	<a class="pie" href="acercade.html">Acerca de</a>
+	<footer>
+		<a class="pie" href="acercade.html">Acerca de</a>
+	</footer>
 </body>
 </html>
