--- a/acercade.html
+++ b/acercade.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -10,24 +10,24 @@
   <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 
-  <title>Cronómetro - Acerca de</title>
+  <title>Cron&oacute;metro - Acerca de</title>
 </head>
 <body>
     <header>
 	<div class="cabecera">
 		<img class="logo" src="img/timer.png" alt="Logo">
 		<h2>Cron&oacute;metro</h2>
-<!--		<img class="close" src="img/close.png" alt="Cerrar" onclick="cerrar();"> -->
     </div>
 	</header>
-    
-	<footer>
+
 	<div class="cuerpo">
-		<h1>App desarrollada por J. Juan Hernández</h1>
-		<a href="http://aquiesta.org" target="_blank">http://www.aquiesta.org</a>
+		<h1>App desarrollada por <br>J. Juan Hernández</h1>
 		<br>Copyright &copy; 2018
+		<br><a href="http://aquiesta.org" target="_blank">- aquiesta.org -</a>
 	</div>
+	
+	<footer>
+		<a class="pie" href="index.html"><img class="logo" src="img/common-back.png" alt="<">Volver</a>
 	</footer>
-	<a class="pie" href="index.html"><img class="logo" src="img/common-back.png" alt="<">Volver</a>
 </body>
 </html>
